AboutScratch overflow fixes

--- a/frontend/src/components/Scratch/renderTabs.module.scss
+++ b/frontend/src/components/Scratch/renderTabs.module.scss
@@ -14,7 +14,6 @@
 
 .about {
     padding: 16px;
-    max-width: 500px;
     overflow: auto;
 }
 
